# rear_garden

./: README.md
gin_http_server/: README.md  go.mod  go.sum
gin_http_server/cmd/main/: gin_http_server.go
gin_http_server/config/: http_server_config.toml  routing.toml  templates_list.toml
gin_http_server/internal/myhttpserver/: http_server.go
gin_http_server/pkg/rgstring/: string.go
gin_http_server/static/css/: style.css
gin_http_server/static/js/: script.js
gin_http_server/templates/: general1.html  replacement.html  template1.html
pcre_test/: .gitignore  CMakeLists.txt  readme.md
pcre_test/src/: main.c
read_csv/: CMakeLists.txt  readme.md
read_csv/src/: main.c  tools.c  tools.h
read_toml_in_go/: README.md  config.toml  go.mod  pg_config.toml
read_toml_in_go/cmd/main/: read_toml_in_go.go
sqlite_c_test/: CMakeLists.txt  readme.md
sqlite_c_test/src/: main.c
using_psql_in_go/: README.md  go.mod
using_psql_in_go/cmd/main/: using_psql_in_go.go
using_psql_in_go/internal/mypsql/: psql.go
